# chat-backend-rs

./: Cargo.toml  README.md
data/agenticdb/: agenticdb.json
data/agenticdb/chats/: 07645d14-552f-4fe7-9758-855f68b1d570.json  7a34f332-f6b2-4b58-8b44-b2149c04e51e.json
data/prompts/: quiz.txt
src/: lib.rs  logger.rs  main.rs  state.rs
src/agents/: handlers.rs  mod.rs  model.rs  service.rs
src/chat/: dto.rs  handlers.rs  mod.rs  model.rs  service.rs  storage.rs
src/handlers/: chat.rs  helper.rs  llm.rs  mod.rs
src/storage/: mod.rs
